load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "CompressionFlags.go",
        "DynamicHeader.go",
        "Header.go",
        "HeaderBitFlags.go",
        "PayloadHeaders.go",
        "client.go",
        "connection.go",
        "handle.go",
        "header_utils.go",
        "server.go",
        "service.go",
    ],
    importpath = "github.com/senior7515/smf/src/go/smf",
    visibility = ["//visibility:public"],
    deps = [
        "//src/third_party/flatbuffers/go",
        "@com_github_cespare_xxhash//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["dispatch_test.go"],
    embed = [":go_default_library"],
)
